--- a/doc/paper_ms_method_HSCY1/citation.bib
+++ b/doc/paper_ms_method_HSCY1/citation.bib
@@ -810,3 +810,42 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{FPFSHSC1-Li2020,
+     doi = {10.3847/1538-4365/abbad1},
+     url = {https://doi.org/10.3847%2F1538-4365%2Fabbad1},
+     year = 2020,
+     month = {nov},
+     publisher = {American Astronomical Society},
+     volume = {251},
+     number = {2},
+     pages = {19},
+     author = {Xiangchong Li and Masamune Oguri and Nobuhiko Katayama and Wentao Luo and Wenting Wang and Jiaxin Han and Hironao Miyatake and Keigo Nakamura and Surhud More},
+     title = {{FPFS} Shear Estimator: Systematic Tests on the Hyper Suprime-Cam Survey First-year Data},
+     journal = {The Astrophysical Journal Supplement Series},
+
+     abstract = {We apply the Fourier Power Function Shapelets (FPFS) shear estimator to the first-year data of the Hyper Suprime-Cam survey to construct a shape catalog. The FPFS shear estimator has been demonstrated to have a multiplicative bias less than 1% in the absence of blending, regardless of complexities of galaxy shapes, smears of point spread functions (PSFs), and contamination from noise. The blending bias is calibrated with realistic image simulations, which include the impact of neighboring objects, using the COSMOS Hubble Space Telescope images. Here we carefully test the influence of PSF model residual on the FPFS shear estimation and the uncertainties in the shear calibration. Internal null tests are conducted to characterize potential systematics in the FPFS shape catalog, and the results are compared with those measured using a catalog where the shapes were estimated using the re-Gaussianization algorithms. Furthermore, we compare various weak-lensing measurements between the FPFS shape catalog and the re-Gaussianization shape catalog and conclude that the weak-lensing measurements between these two shape catalogs are consistent with each other within the statistical uncertainty.}
+}
+
+@ARTICLE{HSC1-massMap-cluster,
+       author = {{Miyazaki}, Satoshi and {Oguri}, Masamune and {Hamana}, Takashi and
+         {Shirasaki}, Masato and {Koike}, Michitaro and {Komiyama}, Yutaka and
+         {Umetsu}, Keiichi and {Utsumi}, Yousuke and {Okabe}, Nobuhiro and
+         {More}, Surhud and {Medezinski}, Elinor and {Lin}, Yen-Ting and
+         {Miyatake}, Hironao and {Murayama}, Hitoshi and {Ota}, Naomi and
+         {Mitsuishi}, Ikuyuki},
+        title = "{A large sample of shear-selected clusters from the Hyper Suprime-Cam Subaru Strategic Program S16A Wide field mass maps}",
+      journal = {\pasj},
+     keywords = {dark matter, galaxies: clusters: general, gravitational lensing: weak, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = "2018",
+        month = "Jan",
+       volume = {70},
+          eid = {S27},
+        pages = {S27},
+          doi = {10.1093/pasj/psx120},
+archivePrefix = {arXiv},
+       eprint = {1802.10290},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018PASJ...70S..27M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
